--- a/app/index.html
+++ b/app/index.html
@@ -50,11 +50,11 @@
 			<p class="hide-access"><strong>Social links:</strong></p>
 			<ul>
 				<li class="github"><a href="https://github.com/marksy/" target="_blank" title="View Mark Chambers on Github">Github</a></li>
-				<li class="twitter"><a href="https://twitter.com/marksy" target="_blank" title="View Mark Chambers on Twitter">Twitter</a></li>
+				<li class="twitter"><a href="https://twitter.com/marksy/" target="_blank" title="View Mark Chambers on Twitter">Twitter</a></li>
 				<li class="linkedin"><a href="https://www.linkedin.com/profile/view?id=12902546" target="_blank" title="View Mark Chambers on LinkedIn">LinkedIn</a></li>
 			</ul>
 			
-			<p>All Rights Reserved. &copy; 2014 <a href="http://marksy.com" title="Marksy">marksy ltd</a></p>
+			<p>&copy; 2014 <a href="http://marksy.com">Marksy Development ltd</a></p>
 		</footer>
 
 		<script src="vendor/js/jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
